--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                             <table align="center" cellpadding="0" cellspacing="0" border="0" role="presentation" width="100%" style="border-collapse:collapse;">
                               <tr>
                                 <td align="center" style="border-collapse:collapse;">
-                                  <a href="https://github.com/egaiosowor" style="font-size:14px;font-weight: 600; color:#422621; text-decoration: none;">ABOUT
+                                  <a onclick="return false" href="https://github.com/egaiosowor" style="font-size:14px;font-weight: 600; color:#422621; text-decoration: none;">ABOUT
                                                                     US</a>
                                 </td>
                                 <td align="center" style="border-collapse:collapse;">
-                                  <a href="https://github.com/egaiosowor" style="font-size:14px;font-weight: 600; color:#422621; text-decoration: none;">SHOP
+                                  <a onclick="return false" href="https://github.com/egaiosowor" style="font-size:14px;font-weight: 600; color:#422621; text-decoration: none;">SHOP
                                                                     MEN</a>
                                 </td>
                                 <td align="center" style="border-collapse:collapse;">
-                                  <a href="https://github.com/egaiosowor" style="font-size:14px;font-weight: 600; color:#422621; text-decoration: none;">SHOP
+                                  <a onclick="return false" href="https://github.com/egaiosowor" style="font-size:14px;font-weight: 600; color:#422621; text-decoration: none;">SHOP
                                                                     WOMEN</a>
                                 </td>
                                 <td align="center" style="border-collapse:collapse;">
-                                  <a href="https://github.com/egaiosowor" style="font-size:14px;font-weight: 600; color:#422621; text-decoration: none;">SHOP
+                                  <a onclick="return false" href="https://github.com/egaiosowor" style="font-size:14px;font-weight: 600; color:#422621; text-decoration: none;">SHOP
                                                                     KIDS</a>
                                 </td>
                               </tr>
@@ -158,7 +158,7 @@
                         <!-- About button starts here -->
                         <tr>
                           <td align="center" style="border-collapse:collapse;">
-                            <a href="https://github.com/egaiosowor" style="font-size:14px;display: inline-block; max-width: 90px; min-height: 35px; text-decoration: none; color: #fff; border-radius: 4px; border: 1px solid;">
+                            <a onclick="return false" href="https://github.com/egaiosowor" style="font-size:14px;display: inline-block; max-width: 90px; min-height: 35px; text-decoration: none; color: #fff; border-radius: 4px; border: 1px solid;">
                                 <table style="border-collapse:collapse;max-width: 120px; min-height: 35px;" align="center" cellpadding="0" cellspacing="0" border="0" role="presentation" width="100%">
                                   <tr>
                                     <td width="10" style="border-collapse:collapse;"></td>
@@ -225,7 +225,7 @@
                                                 <!-- cta button -->
                                                 <tr>
                                                   <td align="center" style="border-collapse:collapse;">
-                                                    <a href="https://github.com/egaiosowor" style="font-size:14px;display: block; min-width: 90px; max-width: 100px; min-height: 35px; font-weight: 600; text-decoration: none; color: #422621; border-radius: 4px; border: 2px solid;">
+                                                    <a onclick="return false" href="https://github.com/egaiosowor" style="font-size:14px;display: block; min-width: 90px; max-width: 100px; min-height: 35px; font-weight: 600; text-decoration: none; color: #422621; border-radius: 4px; border: 2px solid;">
                                                         <table style="border-collapse:collapse;min-width: 90px; max-width: 100px; min-height: 35px;" align="center" cellpadding="0" cellspacing="0" border="0" role="presentation" width="100%">
                                                           <tr>
                                                             <td width="10" style="border-collapse:collapse;">
@@ -282,7 +282,7 @@
                                                 <!-- cta button -->
                                                 <tr>
                                                   <td align="center" style="border-collapse:collapse;">
-                                                    <a href="https://github.com/egaiosowor" style="font-size:14px;display: block; min-width: 90px; max-width: 100px; min-height: 35px; font-weight: 600; text-decoration: none; color: #422621; border-radius: 4px; border: 2px solid;">
+                                                    <a onclick="return false" href="https://github.com/egaiosowor" style="font-size:14px;display: block; min-width: 90px; max-width: 100px; min-height: 35px; font-weight: 600; text-decoration: none; color: #422621; border-radius: 4px; border: 2px solid;">
                                                         <table style="border-collapse:collapse;min-width: 90px; max-width: 100px; min-height: 35px;" align="center" cellpadding="0" cellspacing="0" border="0" role="presentation" width="100%">
                                                           <tr>
                                                             <td width="10" style="border-collapse:collapse;">
@@ -344,7 +344,7 @@
                                                 <!-- cta button -->
                                                 <tr>
                                                   <td align="center" style="border-collapse:collapse;">
-                                                    <a href="https://github.com/egaiosowor" style="font-size:14px;display: block; min-width: 90px; max-width: 100px; min-height: 35px; font-weight: 600; text-decoration: none; color: #422621; border-radius: 4px; border: 2px solid;">
+                                                    <a onclick="return false" href="https://github.com/egaiosowor" style="font-size:14px;display: block; min-width: 90px; max-width: 100px; min-height: 35px; font-weight: 600; text-decoration: none; color: #422621; border-radius: 4px; border: 2px solid;">
                                                         <table style="border-collapse:collapse;min-width: 90px; max-width: 100px; min-height: 35px;" align="center" cellpadding="0" cellspacing="0" border="0" role="presentation" width="100%">
                                                           <tr>
                                                             <td width="10" style="border-collapse:collapse;">
@@ -401,7 +401,7 @@
                                                 <!-- cta button -->
                                                 <tr>
                                                   <td align="center" style="border-collapse:collapse;">
-                                                    <a href="https://github.com/egaiosowor" style="font-size:14px;display: block; min-width: 90px; max-width: 100px; min-height: 35px; font-weight: 600; text-decoration: none; color: #422621; border-radius: 4px; border: 2px solid;">
+                                                    <a onclick="return false" href="https://github.com/egaiosowor" style="font-size:14px;display: block; min-width: 90px; max-width: 100px; min-height: 35px; font-weight: 600; text-decoration: none; color: #422621; border-radius: 4px; border: 2px solid;">
                                                         <table style="border-collapse:collapse;min-width: 90px; max-width: 100px; min-height: 35px;" align="center" cellpadding="0" cellspacing="0" border="0" role="presentation" width="100%">
                                                           <tr>
                                                             <td width="10" style="border-collapse:collapse;">
